--- a/XMLAnalyzer/MainWindow.xaml
+++ b/XMLAnalyzer/MainWindow.xaml
@@ -5,8 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XMLAnalyzer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="645.576">
     <Grid>
-        
+        <Grid HorizontalAlignment="Stretch" Margin="10,10,10,10" VerticalAlignment="Stretch"  >
+            <Grid Height="50px" HorizontalAlignment="Stretch" VerticalAlignment="Top" >
+                <GroupBox Header="Wybierz plik wejściowy (XML)" HorizontalAlignment="Left" Height="50" VerticalAlignment="Top" Width="230">
+                    <Button Content="Select" HorizontalAlignment="Left" Height="20" Margin="0,0,0,-5"  VerticalAlignment="Center" Width="75" />
+                </GroupBox>
+                <GroupBox Header="Wybierz folder zapisu (XML)" HorizontalAlignment="Right" Height="50" VerticalAlignment="Top" Width="230">
+                    <Button Content="Select" HorizontalAlignment="Left" Height="20"  VerticalAlignment="Center" Width="75" />
+                </GroupBox>
+            </Grid>
+           <Expander Margin="0,65,0,10" IsExpanded="True">
+                <Expander.Header>
+                    <StackPanel>
+                        <TextBlock>The list of found errors in your file</TextBlock>
+                    </StackPanel>
+                </Expander.Header>
+                <DataGrid HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            </Expander>
+
+        </Grid>
     </Grid>
 </Window>
